2005-01-29  Tom Tromey  <tromey@redhat.com>

	* aot/mangle.cc: New file.
	* aot/mangle.hh: New file.
	* aot/aotfactory.cc: New file.
	* aot/aotfactory.hh: New file.
	* aot/aotclass.cc: New file.
	* aot/aotclass.hh: New file.
	* Makefile.in: Rebuilt.
	* Makefile.am (aot_sources): New macro.
	(libgcjx_la_SOURCES): Use it.

2005-01-25  Tom Tromey  <tromey@redhat.com>

	* source/parse.cc (any_method_declarator): Update method return
	type if brackets follow method name.

2005-01-25  Tom Tromey  <tromey@redhat.com>

	* bytecode/classwriter.cc (check_type): New method.
	(write): Use it.
	* bytecode/classwriter.hh (class_writer::check_type): Declare.
	* bytecode/generate.cc (visit_for_enhanced): Use check_type.
	(visit_cast): Likewise.
	(visit_class_ref): Likewise.
	(visit_instanceof): Likewise.
	(visit_new_array): Likewise.
	(visit_array_initializer): Likewise.

2005-01-25  Tom Tromey  <tromey@redhat.com>

	* defassign.cc (variable_state::check_loop): New method.
	(definite_assignment_visitor::visit_for_enhanced): Use it.
	(definite_assignment_visitor::visit_for): Likewise.
	(definite_assignment_visitor::visit_while): Likewise.
	(definite_assignment_visitor::visit_do): Likewise.
	(definite_assignment_visitor::loop_depth): Removed.
	(definite_assignment_visitor): Updated.
	(~definite_assignment_visitor): Likewise.
	(variable_state::print): Updated.
	(definite_assignment_visitor::visit_for_enhanced): Create a join
	state.

2005-01-23  Tom Tromey  <tromey@redhat.com>

	* defassign.cc (join_state::pending_target): New structure.
	(join_state::pending_pairs_type): Redefine.
	(join_state::add_pending): Rewrote.
	(join_state::abnormal_finally): Removed.
	(join_state): Updated.
	(definite_assignment_visitor::visit_try): Updated.
	(definite_assignment_visitor::propagate_branch): Unconditionally
	return when a 'try' is seen.
	(variable_state::set_definite_assignment_from): New method.

2005-01-23  Tom Tromey  <tromey@redhat.com>
